<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gu</groupId>
  <artifactId>market</artifactId>
  <packaging>war</packaging>
  <version>1.0</version>

  <name>market</name>
  <url>http://maven.apache.org</url>

  <dependencies>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Spring 4 dependencies 원래 4.1.2였음 5.0.7로 업데이트-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>5.0.7.RELEASE</version>
        </dependency> 
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>5.0.7.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>5.0.7.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>5.0.7.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>5.0.7.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>2.2</version>
    	</dependency>
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>jstl</artifactId>
		    <version>1.2</version>
		</dependency>
        
		<!--  -->                        
      	<dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-api</artifactId>
        	<version>2.5</version>
      	</dependency>
      	<dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-core</artifactId>
        	<version>2.5</version>
      	</dependency>
		<dependency>
			<groupId>org.bgee.log4jdbc-log4j2</groupId>
			<artifactId>log4jdbc-log4j2-jdbc4</artifactId>
			<version>1.16</version>
		</dependency>

        <dependency>
			<groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j-impl</artifactId>
		    <version>2.5</version>
	  	</dependency>

 		<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.18</version>
        </dependency>
		                         
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.6</version>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>1.1.0</version>
        </dependency>
        
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.2.2</version>
        </dependency>
        
        <!-- file upload -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.0.1</version>
		</dependency>
		 
		<dependency>
		    <groupId>commons-fileupload</groupId>
		    <artifactId>commons-fileupload</artifactId>
		    <version>1.2.2</version>
		</dependency>
		 
        <!-- json string to list        
        <dependency>
		    <groupId>org.codehaus.jackson</groupId>
		    <artifactId>jackson-mapper-asl</artifactId>
		    <version>1.9.13</version>
		</dependency>
--> 
         <dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.13.0</version>
		</dependency>
		<dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>2.13.0</version>
		</dependency>
        
        <!-- JSON 파싱 -->
		<dependency>
	    	<groupId>com.google.code.gson</groupId>
	    	<artifactId>gson</artifactId>
	    	<version>2.8.5</version>
		</dependency>	
		<dependency>
    		<groupId>org.json</groupId>
    		<artifactId>json</artifactId>
    		<version>20180813</version>
		</dependency>
		<!-- localdate type binding용 -->
		<dependency>
		  	<groupId>org.mybatis</groupId>
		  	<artifactId>mybatis-typehandlers-jsr310</artifactId>
		  	<version>1.0.2</version>
		</dependency>
		<!-- 파일업로드 -->  
		<dependency>
		    <groupId>servlets.com</groupId>
		    <artifactId>cos</artifactId>
		    <version>05Nov2002</version>
		</dependency>
		<!-- sha2비밀번호암호화 -->
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.9</version>
		</dependency>
		
		<!-- redis -->
		<dependency>
		    <groupId>redis.clients</groupId>
		    <artifactId>jedis</artifactId>
		    <version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-redis</artifactId>
		    <version>1.8.6.RELEASE</version>
		</dependency>

		<dependency>
	      <groupId>com.sendgrid</groupId>
	      <artifactId>java-http-client</artifactId>
	      <version>4.3.8</version>
	    </dependency>
	    <dependency>
	      <groupId>com.sendgrid</groupId>
	      <artifactId>sendgrid-java</artifactId>
	      <version>4.8.1</version>
	    </dependency>

    </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
		<version>2.3.2</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
		  <encoding>UTF-8</encoding>          
        </configuration>
      </plugin>
      
      <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <version>2.22.0</version>
  <configuration>
    <argLine>--illegal-access=permit</argLine>
  </configuration>
</plugin>

<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId> maven-failsafe-plugin</artifactId>
  <version>2.22.0</version>
  <configuration>
    <argLine>--illegal-access=permit</argLine>
  </configuration>
</plugin>
    </plugins>
  </build>
</project>
